--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@
 # Kernel Module Compile Results
 *.mod*
 *.cmd
+
+# Python virtual environment
+venv
 .tmp_versions/
 modules.order
 Module.symvers
